Image like functionality
Was created a the likes controller, this controller has the like method,
that gets the image_liked with the id that comes as parameter.

After that, it validates if the current user already liked that image,
if true, then unlikes it, otherwise likes the image.

In the index view was added a div with a button_to, that basically is a
form to the '/like/:id', with post method.

--- a/app/views/images/index.html.erb
+++ b/app/views/images/index.html.erb
@@ -6,6 +6,9 @@
       <div class="top-overlay">
         <%= link_to "delete", img, method: :delete, data: { confirm: "After deleting this image won't be possible restore it, Are you sure to delete it?" } %>
       </div>
+      <div class="like">
+        <%= button_to "Like", "/like/#{img.id}", method: :post %>
+      </div>
     </div>
     <div class="image_<%=img.title%>">
       <div class="image-photo">
