--- a/app/views/images/show.html.erb
+++ b/app/views/images/show.html.erb
@@ -1,4 +1,12 @@
 <div class="image">
+  <div class="overlay">
+    <div class="top-overlay">
+      <%= link_to "delete", @image, method: :delete, data: { confirm: "After deleting this image won't be possible restore it, Are you sure to delete it?" } %>
+    </div>
+    <div class="like">
+      <%= button_to "Like", "/like/#{@image.id}", method: :post %>
+    </div>
+  </div>
   <div class="image-photo">
     <%= image_tag @image.photo, width: 200 if @image.photo.attached? %>
   </div>
