--- a/app/views/images/show.html.erb
+++ b/app/views/images/show.html.erb
@@ -18,8 +18,11 @@
       <%= @image.location %>
     </div>
     <div class="image-tags">
-      <% @image.tags.select { |t| @tags.push(t.tag_name) } %>
-      <%= @tags.to_sentence %>
+      <div class="tag">
+        <% @image.tags.each do |t| %>
+          <span id="<%= t.tag_name.delete(' ') %>_tag"><%= t.tag_name %></span>
+          <% end %>
+      </div>
     </div>
   </div>
 </div>
